# company-rag

./: .env.example  .gitignore  README.md  app.py  config.py  pyproject.toml
.github/workflows/: test.yml
docs/: 20260611-ai-engineer-job-describition-examples.md  portfolio-polish-workflow.md
docs/adr/: adr-001-evaluation-metrics.md  adr-002-model-hierarchy.md  adr-003-regression-testing.md  adr-004-framework-free-architecture.md  adr-005-semantic-chunking.md  adr-006-input-output-guardrails.md
docs/architecture/: answer-overview.md  baseline-overview.md  eval-overview.md  ingest-overview.md
docs/evaluation_result/: evaluation-report-20260709_175414.md  evaluation-report-20260713_172437.md  evaluation-report-20260714_122443.md  evaluation-report-20260714_164417.md  evaluation-report-20260715_134048.md  evaluation-report-20260715_143829.md
docs/prompt/: script-analysis.md
docs/refine/: stage0-build-context.md  stage1-analysis.md  stage2-refine-records.md  stage2.5-backlog_c1.md
docs/workflow/: portfolio-polish-workflow.md
evaluation/: baseline.py  eval.py  report.py
evaluation/baselines/: 20260709_175414.json  20260714_122443.json  20260714_164417_v2_subset_check.json  20260715_134048_v3_subset_check.json  20260715_143829_v3_baseline.json  v1_baseline.json
preprocessed_db/: chroma.sqlite3
tests/: test_answer_utils.py  test_eval_metrics.py  test_prompt_regression.py
utils/: answer.py  ingest.py
