[project]
name = "llm-engineering"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.1.0",
    "gradio>=5.47.2,<6.0",
    "litellm>=1.77.5",
    "openai>=1.109.1",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.1",
    "tenacity>=8.2.0",
    "pydantic>=2.0.0",
    "numpy>=2.3.3",
    "scikit-learn>=1.7.2",
    "plotly>=6.3.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.76",
    "langchain-openai>=0.3.33",
    "langchain-text-splitters>=0.3.11",
    "langchain-huggingface>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langchain-anthropic>=1.0.1",
    "langchain-experimental>=0.0.42",
]


[tool.pytest.ini_options]
pythonpath = [
  "."
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

